# task-buddy-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_STRUCTURE.py  README.md  SECURITY.md  alembic.ini  api_endpoints.md  app.log.1  database_schema.md  docker-compose.yml  private_key.pem  public_key.pem  pyproject.toml  requirements-dev.txt  requirements.txt  seed.py  start.sh  test_db_url_extended.py  whole_documentation.md
.agents/skills/openapi-to-application-code/: SKILL.md
.agents/skills/postgresql-code-review/: SKILL.md
.github/: copilot-instructions.md
.github/agents/: apify-integration-expert.agent.md
.github/workflows/: apisec-scan.yml  mayhem-for-api.yml  python-app.yml  soos-dast-scan.yml
.planning/: 1-2-UAT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/map/: STACK.md
.planning/phases/: 03.75-notifications-context.md  04.9-cleanup-context.md  05-real-time-sync-context.md
alembic/: env.py
alembic/versions/: 2935b98be508_add_priority_to_tasks.py  38d622ba3db7_add_group_model_v2.py  4f7c8440bd82_add_position_to_subtask.py  67fff7e05b96_initial_migration_with_projects.py  8f6a43cb7234_add_position_field.py  a6e267909ed1_initial_migration.py  b09a9405a8af_add_notifications_and_subscriptions.py  c74d67078105_add_color_and_icon_to_tags_and_projects.py  d9bd855fcdf5_upgrade_datetime_to_timestamptz.py  e7d04c90bc13_add_audit_logs_table.py  ed27f78207cd_add_performance_indexes.py
api/: __init__.py
app/: __init__.py  celery_app.py  config.py  database.py  dependencies.py  limiter.py  logging_conf.py  main.py  security.py  tasks.py
app/api/: __init__.py  dependencies.py
app/api/routers/: task.py  (+11 more)
app/crud/: __init__.py  audit.py  group.py  notification.py  project.py  stats.py  tag.py  task.py  user.py
app/internal/: __init__.py  admin.py  audit.py
app/libs/: audit.py  broadcaster.py  email_templates.py
app/middleware/: idempotency.py
app/models/: __init__.py  audit.py  group.py  notification.py  project.py  tag.py  task.py  user.py
app/routers/: __init__.py
app/schemas/: __init__.py  audit.py  enums.py  group.py  notification.py  project.py  stats.py  tag.py  task.py  user.py
docs/: flowchart.drawio  system_flowchart.md
docs/codebase/: .codebase-scan.txt  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md  flowchart (1).drawio
docs/superpowers/: flowchart.drawio
graphify-out/: .graphify_labels.json  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  docs_content.txt  graph.html  graph.json
scratch/: check_subs.py
scripts/: gen_vapid.py  gen_vapid_v2.py  seed.py  test_email_delivery.py  test_push_notification.py
tests/: __init__.py  conftest.py  test_concurrency.py  test_health.py  test_idempotency.py  test_idempotency_hardened.py  test_idempotency_ratelimit.py  test_logout_blacklist.py  test_main.py  test_migrations.py  test_notification_tasks.py  test_notifications.py  test_notifications_crud.py  test_reliability.py  test_security.py  test_security_hardening.py  test_seed.py  test_tasks.py  test_user_flow.py
tests/routers/: test.user.py  test_audit.py  test_audit_automation.py  test_audit_diffs.py  test_group.py  test_notifications.py  test_password_reset.py  test_project.py  test_stats.py  test_task.py  test_user.py
(+38 files in other folders)
