[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-buddy-backend"
version = "0.1.0"
description = "FastAPI backend for Task Buddy application"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["fastapi", "api", "tasks", "backend"]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "argon2-cffi>=23.1.0",
    "sentry-sdk>=1.30.0",
    "asgi-correlation-id>=4.2.0",
    "databases[sqlite]>=0.8.0",
    "rich>=13.5.0",
    "python-json-logger>=2.0.7",
    "aiosqlite>=0.19.0",
    "alembic>=1.12.0",  # Database migrations
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver for Alembic
    "asyncpg>=0.28.0",  # Async PostgreSQL driver for FastAPI
    "httpx>=0.24.0",
    "redis>=5.0.0",
    "b2sdk>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver
]

[project.urls]
Homepage = "https://github.com/yourusername/task-buddy-backend"
Documentation = "https://github.com/yourusername/task-buddy-backend#readme"
Repository = "https://github.com/yourusername/task-buddy-backend.git"
Issues = "https://github.com/yourusername/task-buddy-backend/issues"

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --disable-warnings"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "C",     # flake8-comprehensions
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
]
ignore = [
    "E501",  # line-too-long (handled by black)
    "B008",  # function-call-in-default-argument
]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
]
ignore_missing_imports = true

[tool.setuptools]
packages = ["app"]
